# ncx

./: .gitignore  SETUP_GUIDE.md  bus-station-vhd-names.md  pyproject.toml  setup.py
buggy/: .gitignore  .replit  API_CONTRACT_MATRIX.md  API_CONTRACT_VALIDATION_REPORT.md  AUTH_SECURITY_AUDIT_REPORT.md  CODE_OF_CONDUCT.md  COMPLIANCE_ANALYSIS_REPORT.md  COMPREHENSIVE_ANALYSIS_REPORT.md  COMPREHENSIVE_ENVIRONMENT_VALIDATION_REPORT.md  CONTRIBUTING.md  DATA_CONSISTENCY_VALIDATION_REPORT.md  DATA_FLOW_ARCHITECTURE.md  DATA_FLOW_DIAGRAM.txt  DATA_FLOW_EXECUTIVE_SUMMARY.md  Dockerfile.frontend  ENVIRONMENT_VALIDATION_REPORT.md  EXECUTION_SUMMARY.md  EXECUTIVE_SUMMARY_AND_ROADMAP.md  FINAL_COMPREHENSIVE_REPORT.md  INTERFACE_DOCUMENTATION_AUDIT_REPORT.md  MIGRATION_GUIDE.md  MVP_FEATURE_SET_AND_USER_STORIES.md  Makefile  NEURALBLITZ_COMPREHENSIVE_SUMMARY.md  NEURALBLITZ_DEPLOYMENT_ANALYSIS.md  NEURALBLITZ_PERFORMANCE_ANALYSIS.md  PHASE1_TECHNICAL_SPECS.md  PHASE4_ADVANCED_RESEARCH_INTEGRATION.md  QUANTUM_SPIKING_NEURON_COMPLETE_REPORT.md  QUANTUM_SPIKING_NEURON_TECHNICAL_ANALYSIS.md  QUANTUM_VALIDATION_EXECUTIVE_SUMMARY.md  QUANTUM_VALIDATION_REPORT_V50.md  RD_CASESTUDY_FRAMEWORK.md  RD_COMPLETION_REPORT.md  RD_CROSS_LAYER_SYNTHESIS.md  RD_STAGE1_FINDINGS.md  RD_STAGE2_DEPENDENCIES.md  RD_STAGE3_INTEGRATION.md  RD_STAGE4_2_INTEGRATION_PATHWAY_TESTING.md  RD_STAGE4_5_FINAL_SYNTHESIS.md  (+52 more)
buggy/alembic/: env.py
buggy/alembic/versions/: 2026_02_09_1145-001_initial_schema.py  2026_02_09_1200-002_quantum_neuron_tables.py  2026_02_09_1215-003_multi_reality_network_tables.py  2026_02_09_1230-004_consciousness_tracking_tables.py  2026_02_09_1245-005_seed_data.py
buggy/buggy-ai/: ARCHITECTURE.md  README.md  buggy-ai  buggy-platform  go.mod
buggy/buggy-ai/cmd/api/: main.go
buggy/buggy-ai/cmd/buggy-ai/: main.go
buggy/buggy-ai/cmd/platform/: main.go
buggy/buggy-ai/cmd/server/: main.go
buggy/buggy-ai/internal/agent/: agent.go
buggy/buggy-ai/internal/ai/: provider.go
buggy/buggy-ai/internal/batch/: batch.go
buggy/buggy-ai/internal/cluster/: cluster.go
buggy/buggy-ai/internal/config/: config.go
buggy/buggy-ai/internal/gateway/: gateway.go
buggy/buggy-ai/internal/mcp/: server.go
buggy/buggy-ai/internal/memory/: memory.go
buggy/buggy-ai/internal/orchestrator/: orchestrator.go
buggy/buggy-ai/internal/planner/: planner.go
buggy/buggy-ai/internal/plugins/: plugins.go
buggy/buggy-ai/internal/runner/: runner.go
buggy/client/: requirements.md
buggy/client/src/: App.tsx  index.css
buggy/codebase-monitor/: .env.example  README.md  agent-bridge.js  agent-chat-client.js  agent-logger.js  agent-shell.js  auto-agent.js  client-other.js  client-you.js  launch-agents.sh  live-chat.js  live-monitor.js  multi-agent-tui.js  omnibus.js  package-lock.json  package.json  server.js  shell-client.js  test-bidirectional.js  test-client.js  test-ws.js
buggy/codebase-monitor/public/: app.js  styles.css
buggy/codebase-monitor/services/: AICommandHandler.js  FileWatcher.js  GitMonitor.js  MassiveParallelOrchestrator.js  NeuralBlitzBridge.js  OmnibusRouter.js  TodoManager.js  WebSocketManager.js
buggy/docs/: ALL_PRIORITIES_COMPLETE.md  ASSET_INVENTORY.md  BACKUP_RECOVERY.md  DEVELOPMENT_WORKFLOW.md  ENDPOINTS_PROGRESS.md  GIT_SECURITY_AUDIT.md  IMPLEMENTATION_SUMMARY.md
buggy/docs-site/tutorials/: getting-started.md  multi-reality-networks.md
buggy/file-servers/: README.md  requirements.txt  start-all.sh  test-clients.py
buggy/file-servers/config/: users.json
buggy/file-servers/ftp/: ftp_server.py
buggy/file-servers/sftp/: sftp-server.sh  sshd_config
buggy/file-servers/webdav/: webdav_server.py
buggy/my-tui/: go.mod  main.go
buggy/nb-omnibus-router/: =2.7.0  Dockerfile  Dockerfile.server  README.md  docker-compose.server.yml  docker-compose.yml  requirements.txt  test_api.py  test_server.py
buggy/nb-omnibus-router/api/: __init__.py  auth.py  auth_enhanced.py  main.py
buggy/nb-omnibus-router/cli/: main.py
buggy/nb-omnibus-router/config/: partners.yaml  redis.conf  settings.yaml
buggy/nb-omnibus-router/docs/: API_REFERENCE.md  CACHE_IMPLEMENTATION_SUMMARY.md  CACHING.md  ENDPOINTS.md  GETTING_STARTED.md
buggy/nb-omnibus-router/engines/: __init__.py  agents.py  neuralblitz.py  quantum.py  ui.py
buggy/nb-omnibus-router/monitoring/: alerts.yml  alerts_advanced.yml  circuit_breaker.py  health_checks.py  logging_config.py  metrics.py  prometheus.yml  tracing.py
buggy/nb-omnibus-router/nginx/: nginx.conf
buggy/nb-omnibus-router/server/: README.md  __init__.py  application.py  config.py  health.py  lifecycle.py  main.py  middleware.py
buggy/nb-omnibus-router/tests/: test_api.py  test_cache.py
buggy/nb-omnibus-router/utils/: __init__.py  cache.py
buggy/nb_omnibus_router/db/: backup.py
buggy/ncx/: skills_runner.py
buggy/neuralblitz-agents/: README.md
buggy/neuralblitz-agents/src/: interfaces.py
buggy/neuralblitz-core/: .gitignore  README.md  pyproject.toml
buggy/neuralblitz-core/examples/: neuralblitz_examples.py
buggy/neuralblitz-core/src/: __init__.py  interfaces.py
buggy/neuralblitz-db/: README.md
buggy/neuralblitz-db/models/: __init__.py  api.py  base.py  quantum.py  users.py
buggy/neuralblitz-ui/: README.md
buggy/neuralblitz-ui/src/: neuralblitz.ts  websocket-client.ts
buggy/neuralblitz_core/: aqm_r.py  nbcl_engine.py  oqt_bos.py  qec_ck.py  veritas.py
buggy/neuralblitz_core/tests/: test_utils.py
buggy/neuralblitz_core/utils/: __init__.py  errors.py  id_utils.py  logging.py  math_utils.py  type_utils.py  validation.py
buggy/opencode/: package-lock.json
buggy/scripts/: backup.sh  deploy.sh  partner_onboarding.py  push_to_github.sh
buggy/secure_auth/: password_hasher.py
buggy/server/: Dockerfile  api_server.py  axioma_nn_engine.py  bloom_event_detector.py  ctp_enterprise.py  drs_engine_enhanced.py  halic_engine_enhanced.py  integration_patterns.py  requirements.txt  routes.ts  storage.ts  symbolic_operators.py
buggy/shared/: routes.ts  schema.ts
buggy/src/components/: KnowledgeGraph.jsx
(+152574 files in other folders)
