[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralblitz-core"
version = "1.0.0"
description = "NeuralBlitz Core SDK - Interface definitions for NeuralBlitz AI Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "NeuralBlitz Team", email = "dev@neuralblitz.ai"}
]
keywords = ["ai", "quantum", "neural-network", "consciousness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy >= 1.21.0",
    "pydantic >= 2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort"]

[tool.setuptools.packages.find]
where = ["."]
include = ["neuralblitz_core*"]
